--- a/src/main/resources/templates/clientView.html
+++ b/src/main/resources/templates/clientView.html
@@ -3,59 +3,116 @@
 <head>
     <meta charset="UTF-8">
     <title> Client Page </title>
-    <link rel="stylesheet" th:href="@{/homeStyle.css}">
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css'><link rel="stylesheet" href="./style.css">
+    <script rel="stylesheet" src="https://code.iconify.design/1/1.0.3/iconify.min.js"></script>
+    <meta charset="UTF-8">
+    <title>Home</title>
+    <link rel="stylesheet" th:href="@{/css/homeStyle.css}">
 </head>
 <body>
-<ul>
-    <li><a href="http://localhost:8080/">Home</a></li>
-    <li><a href="http://localhost:8080/clients/all">Clients</a></li>
-    <li><a href="http://localhost:8080/property/all">Property</a></li>
-    <li><a href="http://localhost:8080/reservation/all">Reservation</a></li>
-    <li><a href="http://localhost:8080/users/all">Users</a></li>
-    <li><a href="about.asp">About</a></li>
-</ul>
-
-<table class="myTable">
-    <tr>
-        <td>Client ID</td>
-        <td>First Name</td>
-        <td>Last Name</td>
-        <td>Email</td>
-        <td width="100">CNP</td>
-        <td>Photo</td>
-        <td>Delete</td>
-        <td>Update</td>
-    </tr>
-    <tr th:each="client : ${clientList}" >
-        <td th:text="${client.clientId}" ></td>
-        <td th:text = "${client.firstName}"></td>
-        <td th:text = "${client.lastName}"></td>
-        <td th:text = "${client.email}"></td>
-        <td th:text="${client.cnp}"></td>
-        <td th:text="${client.photo}"></td>
-        <td>
-            <form th:action="@{delete}" method="post" onclick="return confirm('Are you sure you want to delete this item')">
-                <input type="hidden" name="clientId" th:value="${client.clientId}" />
-                <input type="submit" value="Delete" class="btn btn-danger" />
-            </form>
-        </td>
-        <td>
-            <form th:action="@{update}" method="get">
-                <input type="hidden" name="clientId" th:value="${client.clientId}" />
-                <input type="submit" value="Update" class="btn btn-danger" />
-            </form>
-        </td>
-    </tr>
-    
-</table>
-<p>
-<form action="http://localhost:8080/clients/createClient">
-    <input type="submit" value="Create Client" />
-</form>
-
-</p>
+    <div>
+    <div id="viewport">
+        <!-- Sidebar -->
+        <div id="sidebar" style="width: 15%" align="left">
+            <header>
+                <a href="http://localhost:8080/">My App</a>
+            </header>
+            <ul class="nav">
+                <li>
+                    <a href="http://localhost:8080/">
+                        <i class="zmdi zmdi-view-dashboard"></i> Home
+                    </a>
+                </li>
+                <li>
+                    <a href="http://localhost:8080/clients/all">
+                        <i class="zmdi zmdi-male"></i> Clients
+                    </a>
+                </li>
+                <li>
+                    <a href="http://localhost:8080/property/all">
+                        <i class="zmdi zmdi-balance"></i> Properties
+                    </a>
+                </li>
+                <li>
+                    <a href="http://localhost:8080/reservation/all">
+                        <i class="zmdi zmdi-calendar"></i> Reservations
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="zmdi zmdi-info-outline"></i> About
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="zmdi zmdi-comment-more"></i> Contact
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
 
 
+<br>
+<br>
+        <table class="myTable" style="width: 85%" align="right">
+            <tr class="rand">
+                <td width="10%" class="col">Id Client</td>
+                <td class="col">First Name</td>
+                <td class="col" >Last Name</td>
+                <td class="col">Email</td>
+                <td width="100" class="col">CNP</td>
+                <td class="col">Photo</td>
+                <td class="col">Delete</td>
+                <td class="col">Update</td>
+            </tr >
+            <tr th:each="client : ${clientList}" >
+                <td th:text="${client.clientId}"></td>
+                <td th:text = "${client.firstName}"></td>
+                <td th:text = "${client.lastName}"></td>
+                <td th:text = "${client.email}"></td>
+                <td th:text="${client.cnp}"></td>
+                <td th:text="${client.photo}"></td>
+                <td>
+                    <form th:action="@{delete}" method="post" onclick="return confirm('Are you sure you want to delete this item')">
+                        <input type="hidden" name="clientId" th:value="${client.clientId}" />
+                        <input type="submit" value="Delete" class="btn btn-danger" />
+                    </form>
+                </td>
+                <td>
+                    <form th:action="@{update}" method="get"        >
+                        <input type="hidden" name="clientId" th:value="${client.clientId}" />
+                        <input type="submit" value="Update" class="btn btn-danger" />
+                    </form>
+                </td>
+            </tr>
+
+        </table>
+        <br>
+        <br>
+        <br>
+        <table style="width: 85%" align="right" >
+            <tr >
+                <td style="width: 50%">
+                <form action="/clients/findClientByFirstName" class="form-inline">
+                    <div class="form-group mb-2">
+                        <input type="text" class="form-control" name="firstName" placeholder="Search Clients by first name"/>
+                        <input type="submit" value="Search" class="btn btn-primary"/>
+                    </div>
+                </form>
+
+                </td>
+
+                <td style="width: 50%">
+                <form action="http://localhost:8080/clients/createClient">
+                    <input type="submit" value="Create Client" />
+                </form>
+                </td>
+            </tr>
+        </table>
+<br>
+<br>
 
 
 </body>
