--- a/src/main/resources/templates/createClient.html
+++ b/src/main/resources/templates/createClient.html
@@ -1,21 +1,69 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:form="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title> Create Client </title>
-
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css'><link rel="stylesheet" href="./style.css">
+    <script rel="stylesheet" src="https://code.iconify.design/1/1.0.3/iconify.min.js"></script>
+    <meta charset="UTF-8">
+    <title>Home</title>
+    <link rel="stylesheet" th:href="@{/css/homeStyle.css}">
 </head>
+
 <body>
-<form action="#" th:action="@{/clients/createClient}" th:object="${client}" method="post">
+<div id="viewport" >
+    <!-- Sidebar -->
+    <div id="sidebar" style="width: 15%" align="left">
+        <header>
+            <a href="http://localhost:8080/">My App</a>
+        </header>
+        <ul class="nav">
+            <li>
+                <a href="http://localhost:8080/">
+                    <i class="zmdi zmdi-view-dashboard"></i> Home
+                </a>
+            </li>
+            <li>
+                <a href="http://localhost:8080/clients/all">
+                    <i class="zmdi zmdi-link"></i> Clients
+                </a>
+            </li>
+            <li>
+                <a href="http://localhost:8080/property/all">
+                    <i class="zmdi zmdi-widgets"></i> Properties
+                </a>
+            </li>
+            <li>
+                <a href="http://localhost:8080/reservation/all">
+                    <i class="zmdi zmdi-calendar"></i> Reservations
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="zmdi zmdi-info-outline"></i> About
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="zmdi zmdi-comment-more"></i> Contact
+                </a>
+            </li>
+        </ul>
+    </div>
+</div>
+    <div style="width: 35%" align="right">
 
-    <p>First Name: <input type="text" th:field="*{firstName}" /></p>
-    <p>Last Name: <input type="text" th:field="*{lastName}" /></p>
-    <p>Email: <input type="text" th:field="*{email}" /></p>
-    <p>CNP: <input type="text" th:field="*{cnp}" /></p>
-    <p><input type="submit" value="Submit" /></p>
-    <br>
+            <form action="#" th:action="@{/clients/createClient}" th:object="${client}" method="post">
+                <p>First Name: <input type="text" th:field="*{firstName}" /></p>
+                <p>Last Name: <input type="text" th:field="*{lastName}" /></p>
+                <p>Email: <input type="text" th:field="*{email}" /></p>
+                <p>CNP: <input type="text" th:field="*{cnp}" /></p>
+                <p>Photo: <input type="image" th:field="*{photo}" /></p>
+                <p><input type="submit" value="Submit" /></p>
+                <br>
+            </form>
 
-</form>
-
+    </div>
 </body>
 </html>
