--- a/src/main/resources/templates/createProperty.html
+++ b/src/main/resources/templates/createProperty.html
@@ -3,18 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <title>Create Property</title>
-    <link rel="stylesheet" th:href="@{/homeStyle.css}">
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css'><link rel="stylesheet" href="./style.css">
+    <script rel="stylesheet" src="https://code.iconify.design/1/1.0.3/iconify.min.js"></script>
+    <meta charset="UTF-8">
+    <title>Home</title>
+    <link rel="stylesheet" th:href="@{/css/homeStyle.css}">
 </head>
 <body>
+<div id="viewport" style="width: 15%" align="left">
+    <!-- Sidebar -->
+    <div id="sidebar">
+        <header>
+            <a href="http://localhost:8080/">My App</a>
+        </header>
+        <ul class="nav">
+            <li>
+                <a href="http://localhost:8080/">
+                    <i class="zmdi zmdi-view-dashboard"></i> Home
+                </a>
+            </li>
+            <li>
+                <a href="http://localhost:8080/clients/all">
+                    <i class="zmdi zmdi-link"></i> Clients
+                </a>
+            </li>
+            <li>
+                <a href="http://localhost:8080/property/all">
+                    <i class="zmdi zmdi-widgets"></i> Properties
+                </a>
+            </li>
+            <li>
+                <a href="http://localhost:8080/reservation/all">
+                    <i class="zmdi zmdi-calendar"></i> Reservations
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="zmdi zmdi-info-outline"></i> About
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="zmdi zmdi-comment-more"></i> Contact
+                </a>
+            </li>
+        </ul>
+    </div>
+</div>
+    <div style="width: 35%" align="right">
 
-<form action="#" th:action="@{/property/createProperty}" th:object="${property}" method="post">
+        <form action="#" th:action="@{/property/createProperty}" th:object="${property}" method="post">
 
-    <p>Address : <input type="text" th:field="*{address}" /></p>
-    <p>Description : <input type="text" th:field="*{description}" /></p>
-    <p><input type="submit" value="Submit" /></p>
-    <br>
-
-</form>
-
+            <p>Address : <input type="text" th:field="*{address}" /></p>
+            <p>Description : <input type="text" th:field="*{description}" /></p>
+            <p><input type="submit" value="Submit" /></p>
+            <br>
+        </form>
+    </div>
 </body>
 </html>
