--- a/src/main/resources/templates/homePage.html
+++ b/src/main/resources/templates/homePage.html
@@ -1,17 +1,64 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Home</title>
-</head>
-<body>
-<ul>
-    <li><a href="http://localhost:8080/">Home</a></li>
-    <li><a href="http://localhost:8080/clients/all">Clients</a></li>
-    <li><a href="http://localhost:8080/property/all">Property</a></li>
-    <li><a href="http://localhost:8080/reservation/all">Reservation</a></li>
-    <li><a href="http://localhost:8080/users/all">Users</a></li>
-    <li><a href="about.asp">About</a></li>
-</ul>
-</body>
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+    <head>
+        <meta charset="UTF-8">
+        <title>Home</title>
+        <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
+        <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css'><link rel="stylesheet" href="./style.css">
+        <script rel="stylesheet" src="https://code.iconify.design/1/1.0.3/iconify.min.js"></script>
+        <meta charset="UTF-8">
+        <title>Home</title>
+        <link rel="stylesheet" th:href="@{/css/homeStyle.css}">
+
+
+    </head>
+    <body>
+    <div id="viewport">
+        <!-- Sidebar -->
+        <div id="sidebar" style="width: 15%" align="left">
+            <header>
+                <a href="http://localhost:8080/">My App</a>
+            </header>
+            <ul class="nav">
+                <li>
+                    <a href="http://localhost:8080/">
+                        <i class="zmdi zmdi-view-dashboard"></i> Home
+                    </a>
+                </li>
+                <li>
+                    <a href="http://localhost:8080/clients/all">
+                        <i class="zmdi zmdi-link"></i> Clients
+                    </a>
+                </li>
+                <li>
+                    <a href="http://localhost:8080/property/all">
+                        <i class="zmdi zmdi-widgets"></i> Properties
+                    </a>
+                </li>
+                <li>
+                    <a href="http://localhost:8080/reservation/all">
+                        <i class="zmdi zmdi-calendar"></i> Reservations
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="zmdi zmdi-info-outline"></i> About
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="zmdi zmdi-settings"></i> Services
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="zmdi zmdi-comment-more"></i> Contact
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    </div>
+    </body>
 </html>
