--- a/src/main/resources/templates/propertyView.html
+++ b/src/main/resources/templates/propertyView.html
@@ -4,55 +4,93 @@
 <head>
     <meta charset="UTF-8">
     <title>Property View</title>
-    <link rel="stylesheet" th:href="@{/homeStyle.css}">
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css'><link rel="stylesheet" href="./style.css">
+    <script rel="stylesheet" src="https://code.iconify.design/1/1.0.3/iconify.min.js"></script>
+    <meta charset="UTF-8">
+    <title>Home</title>
+    <link rel="stylesheet" th:href="@{/css/homeStyle.css}">
 </head>
 <body>
-<ul>
-    <li><a href="http://localhost:8080/">Home</a></li>
-    <li><a href="http://localhost:8080/clients/all">Clients</a></li>
-    <li><a href="http://localhost:8080/property/all">Property</a></li>
-    <li><a href="http://localhost:8080/reservation/all">Reservation</a></li>
-    <li><a href="http://localhost:8080/users/all">Users</a></li>
-    <li><a href="about.asp">About</a></li>
-</ul>
+<div id="viewport">
+    <!-- Sidebar -->
+    <div id="sidebar" style="width: 15%" align="left">
+        <header>
+            <a href="http://localhost:8080/">My App</a>
+        </header>
+        <ul class="nav">
+            <li>
+                <a href="http://localhost:8080/">
+                    <i class="zmdi zmdi-view-dashboard"></i> Home
+                </a>
+            </li>
+            <li>
+                <a href="http://localhost:8080/clients/all">
+                    <i class="zmdi zmdi-link"></i> Clients
+                </a>
+            </li>
+            <li>
+                <a href="http://localhost:8080/property/all">
+                    <i class="zmdi zmdi-widgets"></i> Properties
+                </a>
+            </li>
+            <li>
+                <a href="http://localhost:8080/reservation/all">
+                    <i class="zmdi zmdi-calendar"></i> Reservations
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="zmdi zmdi-info-outline"></i> About
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="zmdi zmdi-comment-more"></i> Contact
+                </a>
+            </li>
+        </ul>
+    </div>
+<br>
+<br>
+        <table class="myTable" style="width: 100%" align="right">
+            <tr>
+                <td>Id Property</td>
+                <td>Address</td>
+                <td>Description</td>
+                <td>Delete</td>
+                <td>Update</td>
+            </tr>
+            <tr th:each="property : ${propertyList}">
+                <td th:text="${property.propertyId}"></td>
+                <td th:text="${property.address}"></td>
+                <td th:text="${property.description}"></td>
 
-<table class="myTable">
-    <tr>
-        <td>Property ID</td>
-        <td>Address</td>
-        <td>Description</td>
-        <td>Delete</td>
-        <td>Update</td>
-    </tr>
-    <tr th:each="property : ${propertyList}">
-        <td th:text="${property.propertyId}"></td>
-        <td th:text="${property.address}"></td>
-        <td th:text="${property.description}"></td>
+                <td>
+                    <form th:action="@{delete}" method="post"
+                          onclick="return confirm('Are you sure you want to delete this item')">
+                        <input type="hidden" name="propertyId" th:value="${property.propertyId}"/>
+                        <input type="submit" value="Delete" class="btn btn-danger"/>
+                    </form>
+                </td>
+                <td>
+                    <form th:action="@{update}" method="get">
+                        <input type="hidden" name="propertyId" th:value="${property.propertyId}"/>
+                        <input type="submit" value="Update" class="btn btn-danger"/>
+                    </form>
 
-        <td>
-            <form th:action="@{delete}" method="post"
-                  onclick="return confirm('Are you sure you want to delete this item')">
-                <input type="hidden" name="propertyId" th:value="${property.propertyId}"/>
-                <input type="submit" value="Delete" class="btn btn-danger"/>
-            </form>
-        </td>
-        <td>
-            <form th:action="@{update}" method="get">
-                <input type="hidden" name="propertyId" th:value="${property.propertyId}"/>
-                <input type="submit" value="Update" class="btn btn-danger"/>
-            </form>
+                </td>
+            </tr>
+            <td>
+                <td>
+                    <form action="http://localhost:8080/property/createProperty">
+                        <input type="submit" value="Create Property" />
+                    </form>
+                </td>
+            </td>
 
-        </td>
-    </tr>
-
-</table>
-
-<p>
-<form action="http://localhost:8080/property/createProperty">
-    <input type="submit" value="Create Property" />
-</form>
-</p>
-
+        </table>
+</div>
 
 </body>
 </html>
