--- a/src/main/resources/templates/reservationView.html
+++ b/src/main/resources/templates/reservationView.html
@@ -3,51 +3,123 @@
 <head>
     <meta charset="UTF-8">
     <title>Reservation View</title>
-    <link rel="stylesheet" th:href="@{/homeStyle.css}">
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css'><link rel="stylesheet" href="./style.css">
+    <script rel="stylesheet" src="https://code.iconify.design/1/1.0.3/iconify.min.js"></script>
+    <meta charset="UTF-8">
+    <title>Home</title>
+    <link rel="stylesheet" th:href="@{/css/homeStyle.css}">
 </head>
 <body>
-<ul>
-    <li><a href="http://localhost:8080/">Home</a></li>
-    <li><a href="http://localhost:8080/clients/all">Clients</a></li>
-    <li><a href="http://localhost:8080/property/all">Property</a></li>
-    <li><a href="http://localhost:8080/reservation/all">Reservation</a></li>
-    <li><a href="http://localhost:8080/users/all">Users</a></li>
-    <li><a href="about.asp">About</a></li>
-</ul>
-<table class="myTable">
-    <tr>
-        <td>Reservation ID</td>
-        <td>Start Date</td>
-        <td>End Date</td>
-        <td>Comments</td>
-        <td >Client Rating</td>
-        <td>Property Rating</td>
-        <td>Delete</td>
-        <td>Update</td>
-    </tr>
-    <tr th:each="reservation : ${reservationList}" >
-        <td th:text="${reservation.reservationId}" ></td>
-        <td th:text = "${reservation.startDate}"></td>
-        <td th:text = "${reservation.endDate}"></td>
-        <td th:text = "${reservation.comments}"></td>
-        <td th:text="${reservation.clientRating}"></td>
-        <td th:text="${reservation.propertyRating}"></td>
-        <td>
-            <form th:action="@{delete}" method="post" onclick="return confirm('Are you sure you want to delete this item')">
-                <input type="hidden" name="reservationId" th:value="${reservation.reservationId}" />
-                <input type="submit" value="Delete" class="btn btn-danger" />
-            </form>
-        </td>
-        <td>
-            <form th:action="@{update}" method="get">
-                <input type="hidden" name="reservationId" th:value="${reservation.reservationId}" />
-                <input type="submit" value="Update" class="btn btn-danger" />
-            </form>
-        </td>
-    </tr>
-</table>
-<form action="http://localhost:8080/reservation/createReservation">
-    <input type="submit" value="Create Reservation" />
-</form>
+<div id="viewport">
+    <!-- Sidebar -->
+    <div id="sidebar" style="width: 15%" align="left">
+        <header>
+            <a href="http://localhost:8080/">My App</a>
+        </header>
+        <ul class="nav">
+            <li>
+                <a href="http://localhost:8080/">
+                    <i class="zmdi zmdi-view-dashboard"></i> Home
+                </a>
+            </li>
+            <li>
+                <a href="http://localhost:8080/clients/all">
+                    <i class="zmdi zmdi-link"></i> Clients
+                </a>
+            </li>
+            <li>
+                <a href="http://localhost:8080/property/all">
+                    <i class="zmdi zmdi-widgets"></i> Properties
+                </a>
+            </li>
+            <li>
+                <a href="http://localhost:8080/reservation/all">
+                    <i class="zmdi zmdi-calendar"></i> Reservations
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="zmdi zmdi-info-outline"></i> About
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="zmdi zmdi-comment-more"></i> Contact
+                </a>
+            </li>
+        </ul>
+    </div>
+</div>
+</div>
+
+<br>
+<br>
+
+        <table class="myTable" style="width: 85%" align="right">
+            <tr>
+                <td>Id Reservation</td>
+                <td>Client Name</td>
+                <td>Property</td>
+                <td>Start Date</td>
+                <td>End Date</td>
+                <td>Comments</td>
+                <td>Client Rating</td>
+                <td width="10px">Property Rating</td>
+                <td width="10px">Number of clients</td>
+                <td>Delete</td>
+                <td>Update</td>
+            </tr>
+            <tr th:each="reservation : ${reservationList}"  >
+                <td th:text="${reservation.reservationId}"></td>
+                <td th:text="${reservation.client.firstName}"></td>
+                <td th:text="${reservation.property.address}"></td>
+                <td th:text = "${reservation.startDate}"></td>
+                <td th:text = "${reservation.endDate}"></td>
+                <td th:text = "${reservation.comments}"></td>
+                <td th:text="${reservation.clientRating}"></td>
+                <td width="10px" th:text="${reservation.propertyRating}"></td>
+                <td width="10px" th:text="${reservation.numberOfPersons}"></td>
+
+
+                <td>
+                    <form th:action="@{delete}" method="post" onclick="return confirm('Are you sure you want to delete this item')">
+                        <input type="hidden" name="reservationId" th:value="${reservation.reservationId}" />
+                        <input type="submit" value="Delete" class="btn btn-danger" />
+                    </form>
+                </td>
+                <td>
+                    <form th:action="@{update}" method="get">
+                        <input type="hidden" name="reservationId" th:value="${reservation.reservationId}" />
+                        <input type="submit" value="Update" class="btn btn-danger" />
+                    </form>
+                </td>
+            </tr>
+        </table>
+        <table style="width: 85%" align="right">
+            <tr>
+                <td style="width: 35%">
+                    <form action="/reservation/findReservationByReservationId" class="form-inline">
+                        <div class="form-group mb-2">
+                            <input type="text" class="form-control" name="id" placeholder="Search by ID Reservation"/>
+                            <input type="submit" value="Search" class="btn btn-primary"/>
+                        </div>
+                    </form>
+                </td>
+                <td style="width: 35%">
+                    <form action="http://localhost:8080/reservation/createReservation">
+                        <input type="submit" value="Create Reservation" />
+                    </form>
+                </td>
+                <td style="width: 35%">
+                    <form action="http://localhost:8080/pdfReport">
+                        <input type="submit" value="Generate PDF">
+                    </form>
+                </td>
+
+            </tr>
+
+        </table>
+
 </body>
 </html>
